CSS] fix shop items issue
fix shop items that don't align center.

--- a/ttogel.css
+++ b/ttogel.css
@@ -140,9 +140,7 @@
   }
   .shopswrapper {
     display: flex;
-    padding-left: 600px;
     padding-top: 60px;
-    padding-right: 600px;
     justify-content: space-between;
     padding-bottom: 60px;
     align-items: center;
